# hifive

./: .gitignore  .hgignore  .travis.yml  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  README  README.rst  pyproject.toml  requirements.docs.txt  requirements.txt  setup.py
doc/: Makefile  additional_scripts.rst  api.rst  bi.rst  binning.rst  conf.py  distance_dependence.rst  fend.rst  filtering_data.rst  fivec.rst  fivec_binning.rst  fivec_data.rst  fivec_tutorial.rst  fragment.rst  fragment_handling.rst  getting_started.rst  hic.rst  hic_binning.rst  hic_data.rst  hic_tutorial.rst  hifive.rst  index.rst  introduction.rst  loading_data.rst  make.bat  mrheatmap.rst  normalization.rst  plotting.rst  quasar.rst  quasar_scoring.rst  release_history.rst
hifive/: __init__.py  bi.py  fend.py  fivec.py  fivec_binning.py  fivec_data.py  fragment.py  hic.py  hic_binning.py  hic_data.py  hic_domains.py  plotting.py  quasar.py  schic.py  tads.py  version.py
scripts/: combine_BIs.py  combine_replicates.py  complete_fivec_project.py  complete_hic_project.py  create_fendset.py  create_fivec_dataset.py  create_fivec_heatmap.py  create_fivec_heatmap_h5dict.py  create_fivec_project.py  create_fivec_set.py  create_fragmentset.py  create_hic_dataset.py  create_hic_heatmap.py  create_hic_heatmap_h5dict.py  create_hic_project.py  create_hic_set.py  data2mat.py  find_hic_BI.py  get_interval_fivec_data.py  get_interval_hic_data.py  learn_fivec_normalization.py  learn_fivec_normalization_express.py  learn_hic_normalization.py  learn_hic_normalization_express.py  model_single_chr.py  (+5 more)
(+179 files in other folders)
